added event: try clicking ABOUT ME

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
  aboutME.addEventListener("click",(e)=>{
     if(e.target.innerText ==="ABOUT ME"){
         document.documentElement.setAttribute("change-color","brown");
-        e.target.innerText = "HI!🥕🥑🥔";
+        e.target.innerText = "THINGS TO SHARE🥕";
     } else {
         document.documentElement.setAttribute("change-color","orange");
-        e.target.innerText = "HI!🥕";
+        e.target.innerText = "ABOUT ME";
     }
  });
   </script>
