fix HI! not showing

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
  let hi = document.getElementById("hi");
  hi.addEventListener("mouseover",(e)=>{
     if(e.target.innerText ==="HI!🥕"){
-        document.documentElement.setAttribute("change-color","brown");
+        document.documentElement.setAttribute("change-color","white");
         e.target.innerText = "HI!🥕🥑🥔";
     } else {
         document.documentElement.setAttribute("change-color","orange");
