added br after welcome

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div id="smallCircle" class="whiteBackground"></div>
       <div id="hi" class="fontsize10rem whiteFont bold subject">HI!🥕</div>
       <div class="fontsize7rem whiteFont bold subject line80">
-        WELCOME<br />
+        WELCOME<br /><br />
         TO MY PORFOLIO
       </div>
       <div id="bigCircle" class="whiteBackground" data-id="가져오기!"></div>
