change color for things to share

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
  let aboutME = document.getElementById("aboutME");
  aboutME.addEventListener("click",(e)=>{
     if(e.target.innerText ==="ABOUT ME"){
-        document.documentElement.setAttribute("change-color","brown");
+        document.documentElement.setAttribute("change-color","white");
         e.target.innerText = "THINGS TO SHARE🥕";
     } else {
         document.documentElement.setAttribute("change-color","orange");
